[package]
name = "utopacos"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9.22"
volatile = "0.2.7"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-timeout = 300
test-success-exit-code = 33
